# KU-cafeteria-menu

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: cleanup_legacy_science.yml  test.yml  weekly_menu.yml
data/: state.json  translations.json
docs/superpowers/plans/: 2026-04-20-ku-cafeteria-menu.md  2026-04-21-notion-migration.md
docs/superpowers/specs/: 2026-04-20-ku-cafeteria-menu-design.md  2026-04-21-notion-migration-design.md
scripts/: archive_legacy_science.py  probe_scrape.py
src/: cache.py  config.py  deepseek_client.py  mailer.py  main.py  minimax_client.py  models.py  notion_writer.py  parser.py  photos.py  renderer.py  scraper.py  translation_rules.py  translator.py  utils.py
templates/: email.html.j2
tests/: test_cache.py  test_config.py  test_deepseek_client.py  test_mailer.py  test_main.py  test_minimax_client.py  test_models.py  test_notion_writer.py  test_parser.py  test_photos.py  test_renderer.py  test_scraper.py  test_translator.py  test_utils.py
tests/fixtures/: sample_menu_page.html  sample_menu_with_dishes.html
