[project]
name = "ku-cafeteria-menu"
version = "0.1.0"
description = "Weekly Korea University cafeteria menu translator and mailer"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "premailer>=3.10",
    "python-dateutil>=2.9",
    "tenacity>=8.2",
    "python-slugify>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "inline-snapshot>=0.10",
    "ruff>=0.4",
    "freezegun>=1.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
